# cpp-gameengine

./: CMakeLists.txt  README.md
assets/: VR_Demo.scene
assets/Scripts/: FloatingItem.h
src/: GameRegistry.cpp  main.cpp
src/Engine/Animation/: Skeleton.cpp  Skeleton.h
src/Engine/Audio/: AudioEngine.cpp  AudioEngine.h
src/Engine/Core/: Application.cpp  Application.h  EngineAPI.h  EngineBuildInfo.h.in  Input.cpp  Input.h  UUID.cpp  UUID.h
src/Engine/Editor/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
src/Engine/Project/: AssetRegistry.cpp  AssetRegistry.h  Project.cpp  Project.h  ProjectLoader.cpp  ProjectLoader.h  ProjectSerializer.cpp  ProjectSerializer.h  ScriptBuilder.cpp  ScriptBuilder.h
src/Engine/Renderer/: Buffer.cpp  Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  EditorGrid.cpp  EditorGrid.h  Font.cpp  Font.h  Framebuffer.cpp  Framebuffer.h  Mesh.cpp  Mesh.h  RenderState.cpp  RenderState.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
src/Engine/Scene/: Components.h  Entity.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SceneSerializer.cpp  SceneSerializer.h  SceneSystem.h
src/Engine/Scripting/: GameModule.cpp  GameModule.h  GameModuleAPI.h  GameModuleRuntime.cpp  ScriptMacros.h  ScriptRegistry.cpp  ScriptRegistry.h
src/Engine/Scripts/: CameraController.h  FollowPlayer.h  PlayerController.h  VRPlayerController.h
src/Engine/Utils/: PlatformUtils.cpp  PlatformUtils.h
src/Engine/VR/: VRRigSystem.cpp  VRRigSystem.h  VRSystem.cpp  VRSystem.h
src/Engine/Window/: Window.cpp  Window.h
src/Scripts/: FloatingItem.h  MainMenu.h  PauseMenu.h
